--- a/src/assets/styles/element-ui.styl
+++ b/src/assets/styles/element-ui.styl
@@ -11,15 +11,18 @@
 /* el-button */
 /* el-menu */
 .el-menu
-  // 二级菜单的默认icon
+  border 0 // 消除自带的border
+  text-align left
+
   .icon-menu
     .el-menu-item,
     .el-menu-item.is-active
       position relative
 
+      // 设置「二级菜单」的默认icon
       &:before
         position absolute
-        left 60px
+        left 48px
         top 23px
         width 4px
         height 4px
@@ -28,5 +31,7 @@
         border-radius 50%
 
       &.is-active
+        // 点击后的样式
         &:before
           border 1px solid #409EFF
+
