refactor: 优化侧边栏

--- a/src/assets/styles/variable.styl
+++ b/src/assets/styles/variable.styl
@@ -2,12 +2,20 @@
 $grey = #5a5e66
 $black = #050505
 $blue = #324157
-$light-blue = #3A71A8
-
+$light-blue = #3a71a8
+/* theme color */
+$color-primary = #1890ff // 主色调
+$color-success = #13ce66 // 成功
+$color-warning = #ffba00 // 警告
+$color-danger = #ff4949 // 错误(危险)
+$color-info = #909399 // 提示
 /* size */
-
 
 /* layout */
 $sidebar-width = 170px
-
 $header-height = 60px
+
+/* menu */
+$menu-bg = $color-primary
+$submenu-title-default-color = #303133 // 默认
+$submenu-title-active-color = #409EFF // 激活
