feat(data-graph): implement big screen of data

--- a/src/assets/styles/variable.styl
+++ b/src/assets/styles/variable.styl
@@ -1,8 +1,9 @@
 /* color */
-$grey = #5a5e66
-$black = #050505
-$blue = #324157
-$light-blue = #3a71a8
+$color-white = rgba(255, 255, 255, 1)
+$color-grey = #5a5e66
+$color-black = #050505
+$color-blue = #324157
+$color-light-blue = #3a71a8
 /* theme color */
 $color-primary = #1890ff // 主色调
 $color-success = #13ce66 // 成功
