feat(data-graph): 调整可视化部分的view

--- a/src/assets/styles/element-ui.styl
+++ b/src/assets/styles/element-ui.styl
@@ -142,9 +142,15 @@
     color white
     background-color transparent
   }
+  .el-table thead.is-group th {
+    background-color transparent
+  }
   // 鼠标 hover
   .el-table tbody tr:hover>td {
     background-color rgba(255, 255, 255, 0.2) // 灰色透明
+  }
+  .el-table--border, .el-table--group {
+    border: 0
   }
   // 滚动条的样式
   *::-webkit-scrollbar { /* 定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸 */
