feat:关闭标签，router变换 效果 - 关闭标签，切换到前一个标签 - router-view变化效果

--- a/src/assets/styles/reset.styl
+++ b/src/assets/styles/reset.styl
@@ -172,3 +172,16 @@ a:hover {
     height 0
   }
 }
+.fade-enter {
+  opacity:0;
+}
+.fade-leave{
+  opacity:1;
+}
+.fade-enter-active{
+  transition:opacity 0.2s
+}
+.fade-leave-active {
+  opacity: 0
+  transition: opacity 0.2s
+}
