style(el-form style):

--- a/src/assets/styles/index.styl
+++ b/src/assets/styles/index.styl
@@ -4,3 +4,4 @@ stylus中文版参考文档: https://www.zhangxinxu.com/jq/stylus/
 @import './reset.styl'
 @import './element-ui.styl'
 @import './variable.styl'
+@import './el-form.styl';
